# console

./: .editorconfig  .env  .env.placeholder  .env.test  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  COMPONENT_SHARING_COMPLETE.md  DUCKDB_SETUP.md  LICENSE  QUICK_REFERENCE.md  README.md  RELEASING.md  SHARED_COMPONENTS_SETUP.md  add_clearable.py  eslint.config.mjs  index.html  jest.config.ts  justfile  package-lock.json  package.json  playwright.config.ts  renovate.json  run-tests.sh  temp_table_page_fix.py  test-typo.ts  tsconfig.json  tsconfig.node.json  update_sql_editor.py  update_sql_editor.sh  vite.config.mts
.github/: build.yml  dependabot.yml
.github/workflows/: checks.yml  e2e-tests.yml  release.yml
console-rs/: Cargo.toml  build.rs
console-rs/src/: cache.rs  lib.rs
openapi/: management-open-api.yaml
release-please/: .release-please-manifest.json  release-please-config.json
scripts/: update-dependencies-page.js
src/: App.vue  app.config.ts  auto-imports.d copy.ts  auto-imports.d.ts  components.d copy.ts  components.d.ts  console-components.d.ts  main.ts  typed-router.d.ts
src/assets/: dependencies.json
src/common/: enums.ts  globals.ts  interfaces.ts  queueConfig.ts
src/components/: AddOrEditProjectNameDialog.vue  AppBar.vue  AppFooter.vue  BranchVisualization.vue  EULA.vue  (+51 more)
tests/: .gitignore  CONFIGURATION_FIX.md  FIXTURES_GUIDE.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md  auth.setup.ts.skip  check-services.sh  helpers.ts  login.test.ts  selenium.config.ts  setup.ts  warehouse.test.ts
(+43 files in other folders)
