[package]
name = "lakekeeper-console"
version = "0.1.0"
edition = "2021"
resolver = "2"
homepage = "https://github.com/lakekeeper/lakekeeper"
repository = "https://github.com/lakekeeper/console.git"
rust-version = "1.80.0"
license = "Apache-2.0"

[dependencies]
rust-embed = { version = "^8.4", features = ["interpolate-folder-path"] }

[build-dependencies]
fs_extra = "1.3.0"
